deps/v8/test/message/fail/class-private-brand-count-setter-only.out
*%(basename)s:7: TypeError: Receiver must be an instance of class A
  test() { return this.#a++; }
                       ^
TypeError: Receiver must be an instance of class A
    at Object.test (*%(basename)s:7:24)
    at *%(basename)s:10:18
